# self-evaluating-rag

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py  schemas.py
data/: ingest.py
data/sample_docs/: ai_fundamentals.txt  llm_architectures.txt  ml_engineering.txt  rag_systems.txt  vector_databases.txt
evaluation/: benchmark.py  test_set.py
src/: config.py  observability.py
src/ingestion/: loader.py  vectorstore.py
src/pipeline/: graph.py  nodes.py  state.py
